--- a/Contactos.html
+++ b/Contactos.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Puedes contactarnos en:</h1> <i><a href="Redes.html">Nuestras Redes</a></i>
+    <h5>Tenemso varias formamas para contactarnos como: en esta direccion</h5> <i>Calle:Paraguay num:11341</i>
+
+    <h3>Tambien puedes contactarnos en:</h3> <i><a href="Redes.html">Nuestras Redes</a></i>
+
 </body>
 </html>
