--- a/Contactos.html
+++ b/Contactos.html
@@ -11,5 +11,7 @@
 
     <h3>Tambien puedes contactarnos en:</h3> <i><a href="Redes.html">Nuestras Redes</a></i>
 
+        <hr>
+    <a href="index.html">Volver al inicio</a>
 </body>
 </html>
